--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="id">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>elemes.id — Halaman rumah</title>
   <link rel="stylesheet" href="./src/css/null.css">
   <link rel="stylesheet" href="./src/css/fonts.css">
   <link rel="stylesheet" href="./src/css/index.css">
@@ -14,7 +14,21 @@
   <div class="wrapper">
     <header class="header">
       <div class="header__container container">
-
+        <div class="header__logo">
+          <a href="/index.html" class="header-logo__link"><img src="./public/img/logo.svg" alt="елемес.ид"
+              class="header__logo-image"></a>
+        </div>
+        <ul class="header__navigation">
+          <a href="#" class="header__navigation-item paragraph1">Home</a>
+          <a href="#" class="header__navigation-item paragraph1">About</a>
+          <a href="#" class="header__navigation-item header__navigation-item_hot paragraph1">Promotions</a>
+          <a href="#" class="header__navigation-item paragraph1">Blogs</a>
+          <a href="#" class="header__navigation-item paragraph1">Contact Us</a>
+        </ul>
+        <div class="header__login">
+          <a href="#" class="header__login-button text_paragraph1">Masuk</a>
+          <a href="#" class="header__login-button button text_paragraph1">Daftar Sekarang</a>
+        </div>
       </div>
     </header>
   </div>
