add cardprofile for food in hero

--- a/index.html
+++ b/index.html
@@ -19,18 +19,37 @@
               class="header__logo-image"></a>
         </div>
         <ul class="header__navigation">
-          <a href="#" class="header__navigation-item paragraph1">Home</a>
-          <a href="#" class="header__navigation-item paragraph1">About</a>
-          <a href="#" class="header__navigation-item header__navigation-item_hot paragraph1">Promotions</a>
-          <a href="#" class="header__navigation-item paragraph1">Blogs</a>
-          <a href="#" class="header__navigation-item paragraph1">Contact Us</a>
+          <a href="#" class="header__navigation-item paragraph paragraph1">Home</a>
+          <a href="#" class="header__navigation-item paragraph paragraph1">About</a>
+          <a href="#" class="header__navigation-item header__navigation-item_hot paragraph paragraph1">Promotions</a>
+          <a href="#" class="header__navigation-item paragraph paragraph1">Blogs</a>
+          <a href="#" class="header__navigation-item paragraph paragraph1">Contact Us</a>
         </ul>
         <div class="header__login">
-          <a href="#" class="header__login-button text_paragraph1">Masuk</a>
-          <a href="#" class="header__login-button button text_paragraph1">Daftar Sekarang</a>
+          <a href="#" class="header__login-button button button_color_transparent paragraph paragraph1">Masuk</a>
+          <a href="#" class="header__login-button button button_color_green paragraph paragraph1">Daftar Sekarang</a>
         </div>
       </div>
     </header>
+    <main class="main">
+      <div class="hero">
+        <div class="hero__container container">
+          <div class="hero__column">
+            <h1 class="hero__title title1">Good Food Us Good Mood</h1>
+            <p class="hero__paragraph paragraph paragraph2">I would think that conserving our natural resources should
+              be
+              a conservative position: Not to waste food, and not to throw away a lot of the food that we buy.</p>
+            <div class="hero__buttons">
+              <a href="#" class="hero__button button button_color_green">Daftar Sekarang</a>
+              <a href="#" class="hero__button button button_color_white">About Us</a>
+            </div>
+          </div>
+          <div class="hero__column">
+            <img src="./public/img/food.svg" alt="еда" class="hero__image">
+          </div>
+        </div>
+      </div>
+    </main>
   </div>
 </body>
 
